# Blockchain

marketplace/: folders.py
marketplace/mkplace/: Cargo.toml
marketplace/mkplace/backend/: Cargo.toml  main.rs
marketplace/mkplace/backend/src/: api.rs  db.rs  interactions.rs  security.rs
marketplace/mkplace/backend/src/api/: contracts.rs  disputes.rs  notifications.rs  ratings.rs  tags.rs  transactions.rs  users.rs
marketplace/mkplace/frontend/src/: auth.rs  combination.rs  combination_detail.rs  interaction.rs  main.rs  search.rs  user.rs
marketplace/mkplace/frontend/src/combinations/combinations/: Cargo.toml
marketplace/mkplace/frontend/src/components/: card_contrato.rs  card_experiencia.rs  footer.rs  formulario_creacion_contrato,rs  formulario_resolucion_disputas.rs  formulario_valoracion_comentarios.rs  navbar.rs
marketplace/mkplace/frontend/src/lib/src/: main.rs
marketplace/mkplace/frontend/src/pages/: creacion_edicion_contrato.rs  home.rs  pagina_detalles_contrato.rs  pagina_notificaciones.rs  pagina_perfil_usuario.rs  pagina_resolucion_disputas.rs  pagina_valoracion_comentarios.rs  paginas_detalles_experiencias.rs
