[package]
name = "combinations"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.14", features = ["web_sys"] }
wasm-router = "0.17.0"
wasm-logger = "0.2"
combinations = { path = "./combinations" }

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies.web-sys]
version = "0.3.55"
features = ["console"]